--- a/gb/25/2/3/n14428801.md
+++ b/gb/25/2/3/n14428801.md
@@ -63,7 +63,7 @@
 <p>2025年1月15日，中共应急管理部新闻发布会披露，2024年地震强度和频次增加，新疆乌什发生7.1级强震。</p>
 <p>1月9日至10日，2025年全国地震局长会议在京举行。会议强调，要强化大震巨灾防范，紧盯震情跟踪，做好地震应对准备。</p>
 <h2>结语</h2>
-<p>2025新年伊始至今月余，中国大陆十余省份地震接连不断，非同寻常。地震省份包括西部的新疆、西藏、青海、宁夏，西南的云南、四川、贵州、重庆，华中的安徽，华北的山西、河北，东北的黑龙江；隐现各路“地龙”围攻北京中南海之势。</p>
+<p>2025新年伊始至今月余，中国大陆十余省份地震接连不断，非同寻常。地震省份包括西部的新疆、西藏、青海、宁夏，西南的云南、四川、贵州、重庆，华东的安徽，华北的山西、河北，东北的黑龙江；隐现各路“地龙”围攻北京中南海之势。</p>
 <p>另外，中国周边日本、台湾等地也接连发生6级以上地震。中国大陆及周边地区地震密集爆发，是否是预言家所预言的“毁灭性灾难”的前兆？令人关注。</p>
 <p>目前，中国大陆疫情肆虐、地震连连、经济萧条，中共政权内外交困、风雨飘摇，末日败象尽显。</p>
 <p>中共当局罕见公开强调“要强化大震巨灾防范”，声称提高云南、四川等9个省份“三断（断路、断电、断网）”情况下物资保障能力；一方面，凸显中共高层的末日恐慌，另一方面，中共高层可能已获得相关省份将发生特大地震的内部预测或评估报告，但对民众隐瞒。</p>
@@ -71,34 +71,33 @@
 <p>以往疫情、地震、洪涝等灾难发生后，中共都是救灾不力，维稳第一。中共官僚体系本已腐败透顶，现如今更是躺平瘫痪；所谓提高物资保障根本不可信。中共末日遍地是灾；在此呼吁中国各省民众看清中共真面目，自己动手备足应急物资，以应对各种突发灾难。</p>
 <p>责任编辑：孙芸#</p>
 <p>（大纪元2025年2月3日首发）</p>
-	
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/9/n14410152.md#1">李燕铭：习心腹蔡奇不妙？常委会上被敲打</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14415196.md#1">李燕铭：四省部级高官出事 三国级高官或高危</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/27/n14423680.md#1">李燕铭：张又侠何卫东表态迥异 内斗或白热化</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/30/n14425931.md#1">李燕铭：中共国级高官近年密集病亡 四大特征</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/3/n10686541.md#1" target="_blank">古玉文：名流上书中共的伤痕往事</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/9/3/7/n2454149.md#1" target="_blank">【热点互动】自焚  中共自导的梦魇(2)</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/15/n9844503.md#1" target="_blank">毛泽东诗词的“血旗情结”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/27/n10746220.md#1" target="_blank">觅真：真诚的感恩浸透着民心所向</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/29/n10750586.md#1">张飞转世？岳家将牛皋怒喝退金兵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/5/n14174106.md#1">围炉过年：从除夕到元日的民俗守护人心中的善</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426554.md#1">组图：台湾故宫新年推“岁时吉庆”文物特展</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406436.md#1">古代的中国人是如何过年的？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781725.md#1">宋祁穷得差点“吃剑” 金榜题名后变富贵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426783.md#1">【菁英论坛】政府预算呈自杀式删减 台湾动荡</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14427616.md#1">【时事金扫描】费城空难 机上人全墨西哥籍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14427447.md#1">【菁英论坛】川普上任三把火 全球感受冲击波</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426677.md#1">【军事情报局】歼-20之父杨伟为何被免职？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426716.md#1">央视春晚被爆掩盖苹果Logo 主持人删iPhone合影</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426712.md#1">王菲央视春晚含泪 被爆其父母哥哥均已离世</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426626.md#1">58岁况明洁扛债40年 初三曝近况“能安稳过年”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14427171.md#1">宫﨑骏《风之谷》首登台湾大银幕 3月上映</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/1/n14427530.md#1">赵丽颖大年初二晒拜年照 俏皮试戴奶奶的帽子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/3/n14428726.md#1">大S猝逝消息震惊亚洲 演艺圈星友齐哀悼</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14424919.md#1">新研究揭示咖啡对肠道的独特影响</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/29/n14424895.md#1">姜黄吃多伤肝？ 五代中医教你正确食用方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/2/n14428051.md#1">为什么未来飞机的座椅将由生物塑胶制造？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/30/n14425246.md#1">情绪竟能影响内脏 中西医妙招调节</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426062.md#1">早餐如何吃？ 七原则让你健康又减脂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/2/3/n14428801.htm">李燕铭：中国九省份储备物资 或有强烈地震？</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/2/3/n14428801.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
